--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-httpx==0.25.1
-groq==0.4.1
-pydantic==2.5.0
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+httpx==0.26.0
+groq==0.4.2
+pydantic==2.5.3
+beautifulsoup4==4.12.3
